[package]
name = "stats-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.3"
deadpool-postgres = { version = "0.10", features = ["rt_tokio_1"] }
headers = "0.3.5"
hyper = "0.14.15"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.6", features = ["net", "rt"] }
tokio-postgres = { version = "0.7.5", features = [
    "with-time-0_3",
    "with-uuid-0_8",
] }
tower-http = { version = "0.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "0.8.2", default-features = false }
